# MindJira

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  main.py  migrate.ps1  pyproject.toml
docs/service-template/: Dockerfile  pyproject.toml
docs/service-template/app/: config.py  main.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  Nav.tsx
frontend/src/pages/: Dashboard.tsx  Enrich.tsx  Jobs.tsx  Login.tsx  SprintSummary.tsx  TestCases.tsx
frontend/src/store/: auth.ts
infra/: docker-compose.yml  pyproject.toml
infra/postgres/: init.sql
services/auth/: Dockerfile  pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 0001_initial.py
services/auth/app/: config.py  db.py  deps.py  main.py
services/auth/app/api/: auth.py  internal.py
services/auth/app/models/: __init__.py  models.py
services/auth/app/schemas/: auth.py  internal.py  user.py
services/auth/app/services/: auth_service.py  internal_service.py  security.py
services/auth/tests/: auth_test.py  internal_test.py
services/description-enricher/: Dockerfile  alembic.ini  pyproject.toml
services/description-enricher/alembic/: env.py
services/description-enricher/alembic/versions/: 0001_create_enrichments_table.py
services/description-enricher/app/: config.py  db.py  main.py  task.py
services/description-enricher/app/models/: enrichment.py
services/description-enricher/app/schemas/: enrichment.py
services/description-enricher/tests/: test_health.py
services/gateway/: Dockerfile  alembic.ini  pyproject.toml
services/gateway/alembic/: env.py
services/gateway/alembic/versions/: 0001_create_jobs_table.py
services/gateway/app/: config.py  deps.py  gateway_service.py  main.py  schedule.py
services/gateway/app/api/: router.py
services/gateway/app/models/: job.py
services/gateway/app/schemas/: job.py
services/gateway/tests/: test_health.py
services/sprint-summary/: .env.example  Dockerfile  alembic.ini  pyproject.toml
services/sprint-summary/alembic/: env.py
services/sprint-summary/alembic/versions/: 0001_create_reports_table.py
services/sprint-summary/app/: config.py  db.py  deps.py  main.py  task.py
services/sprint-summary/app/models/: report.py
services/sprint-summary/tests/: test_health.py
services/test-case-generator/: Dockerfile  pyproject.toml
services/test-case-generator/alembic/: env.py
services/test-case-generator/alembic/versions/: 0001_initial.py
services/test-case-generator/app/: config.py  main.py  task.py
services/test-case-generator/app/schemas/: test_case.py
services/test-case-generator/tests/: test_health.py
