[project]
name = "MindJira"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic[email]",
    "pydantic-settings",
    "sqlalchemy",
    "asyncpg",
    "alembic",
    "httpx",
    "structlog",
    "pytest",
    "pytest-asyncio",
    "slowapi",
    "passlib[bcrypt]",
    "bcrypt==4.0.1",
    "python-jose[cryptography]",
    "python-multipart",
    "redis>=5.0.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["app"]