[project]
name = "mindjira-description-enricher"
version = "0.1.0"
description = "description-enricher"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "httpx",
    "structlog",
    "redis>=5.0.0",
    "pytest",
    "pytest-asyncio",
    "ai-client",
    "jira-client",
]

[tool.uv.sources]
ai-client = { path = "../../packages/ai-client" }
jira-client = { path = "../../packages/jira-client" }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
